--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,13 @@
 Package: popthemes
-Title: What the Package Does (One Line, Title Case)
+Title: colour palettes from some 90s pop album covers.
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "John",
+           family = "MacKintosh",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+           email = "johnmackintosh.jm@gmail.com")
+Description: colour palettes for fun
+License: AGPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
