--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
            family = "MacKintosh",
            role = c("aut", "cre"),
            email = "johnmackintosh.jm@gmail.com")
-Description: colour palettes for fun
+Description: colour palettes for fun based on pop album and single covers
 License: AGPL (>= 3)
 Encoding: UTF-8
 LazyData: true
