--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,25 @@
 ^popthemes\.Rproj$
 ^\.Rproj\.user$
 ^LICENSE\.md$
+
+^codecov\.yml$
+^docs$
+^_pkgdown\.yml$
+^data-raw$
+^\.travis\.yml$
+^popthemes\.Rproj$
+^\.Rproj\.user$
+^README\.Rmd$
+^README-.*\.png$
+^pkgdown$
+pkgdown/
+
+^cran-comments\.md$
+^\.github$
+
+
+^_pkgdown\.yml$
+^docs$
+^data-raw$
+netlify.toml
+pkgdown
