--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,8 @@ Authors@R:
            family = "MacKintosh",
            role = c("aut", "cre"),
            email = "johnmackintosh.jm@gmail.com")
-Description: colour palettes for fun based on pop album and single covers
+Description: colour palettes for fun based on pop album and single covers. 
+ Here's some more words to make another sentence.  
 License: AGPL (>= 3)
 Encoding: UTF-8
 LazyData: true
