--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,12 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports: 
+    ggplot2,
+    scales,
+    glue
+Suggests:
+    dplyr,
+    gapminder,
+    testthat,
+    covr
