remove hole palette add kelly clarkson closes#3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(beck_pal)
 export(boo_pal)
 export(bwitched_pal)
 export(deeelite_pal)
-export(hole_pal)
+export(kelly_pal)
 export(nodoubt_pal)
 export(pop_palette)
 export(rickroll_pal)
@@ -17,7 +17,7 @@ export(scale_color_beck)
 export(scale_color_boo)
 export(scale_color_bwitched)
 export(scale_color_deeelite)
-export(scale_color_hole)
+export(scale_color_kelly)
 export(scale_color_nodoubt)
 export(scale_color_rickroll)
 export(scale_color_sclub)
@@ -29,7 +29,7 @@ export(scale_colour_beck)
 export(scale_colour_boo)
 export(scale_colour_bwitched)
 export(scale_colour_deeelite)
-export(scale_colour_hole)
+export(scale_colour_kelly)
 export(scale_colour_nodoubt)
 export(scale_colour_rickroll)
 export(scale_colour_sclub)
@@ -41,7 +41,7 @@ export(scale_fill_beck)
 export(scale_fill_boo)
 export(scale_fill_bwitched)
 export(scale_fill_deeelite)
-export(scale_fill_hole)
+export(scale_fill_kelly)
 export(scale_fill_nodoubt)
 export(scale_fill_rickroll)
 export(scale_fill_sclub)
